--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,2 +1,2 @@
-$('#questions #answers .answers').prepend("<%= escape_javascript (render 'user/answer', answer: @answer) %>");
+$("#questions #answers #question_<%= @answer.question_id %>").prepend("<%= escape_javascript (render 'user/answer', answer: @answer) %>");
 $('.input').val("");
