--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,6 +20,8 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
+    <%= f.hidden_field :role, :value => 1 %>
+
 
   <div class="actions">
     <%= f.submit "Sign up" %>
