--- a/app/views/user/_answer.html.erb
+++ b/app/views/user/_answer.html.erb
@@ -4,7 +4,11 @@
 			
 		</div>
 		<div class="userDetail">
+			<% unless answer.anonymous %>
 			<%= answer.user.first_name %><br>
+			<% else %>
+			Anonymous<br>
+			<% end %>
 			Answered <%= answer.created_at.strftime("%b %d") %>
 		</div>
 	</div>
@@ -12,12 +16,13 @@
 		<div class="content">
 			<%= answer.content %>
 		</div>
+		<% if user_signed_in? %>
 
 		<% if answer.user_id == current_user.id %>
 		<%= link_to 'Show', answer %>
 		<%= link_to 'Edit', edit_answer_path(answer) %>
 		<%= link_to 'Destroy', answer, method: :delete, data: { confirm: 'Are you sure?' } %>
 		<% end %>
-
+		<% end %>
 	</div>
 </div>
