--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -140,12 +140,7 @@ height: 100%;
 }
 
 .question{
-	width: 50vw;
-	margin: auto;
-	background-color: white;
-	margin-bottom: 8px;
-	padding: 12px;
-	box-sizing: border-box;
+	
 	.head{
 		display: flex;
 		height: 36px;
@@ -166,46 +161,14 @@ height: 100%;
 			margin-top: 12px;
 			margin-bottom: 12px;
 			font-size: 36px;
+			color: #5e6264;
 		}
 	}
 }
 
-.answer{
-	width: 100%;
-	margin: auto;
-	background-color: white;
-	margin-bottom: 8px;
-	.head{
-		display: flex;
-		height: 36px;
-		.userImage{
-			height: 100%;
-			width: 36px;
-			border-radius: 18px;
-			background-color: black;
-		}
-		.userDetail{
-			padding-left: 12px;
-			box-sizing: border-box;
-			font-size: 16px;
-		}
-	}
-	.body{
-		.content{
-			margin-top: 12px;
-			margin-bottom: 12px;
-			font-size: 24px;
-		}
-	}
-}
 
-#answers{
-	width: 50vw;
-	margin: auto;
-	background-color: white;
-	padding: 12px;
-	box-sizing: border-box;
-}
+
+
 #questions section{
 	border: 1px solid lightgrey;
 	width: 50vw;
