--- a/app/views/devise/_regForm.html.erb
+++ b/app/views/devise/_regForm.html.erb
@@ -1,34 +1,33 @@
-<h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 <%= devise_error_messages! %>
 
 <div class="field">
-<%= f.label :first_name %><br />
- <%= f.text_field :first_name, autofocus: true %>
+<!-- <%= f.label :first_name %><br /> -->
+ <%= f.text_field :first_name, autofocus: true, placeholder: "First name" %>
 </div>
 
 <div class="field">
- <%= f.label :last_name %><br />
- <%= f.text_field :last_name, autofocus: true %>
+ <!-- <%= f.label :last_name %><br /> -->
+ <%= f.text_field :last_name, autofocus: true, placeholder: "last_name"  %>
 </div>
 
 <div class="field">
-  <%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %>
+  <!-- <%= f.label :email %><br /> -->
+  <%= f.email_field :email, autofocus: true, placeholder: "email"  %>
 </div>
 
 <div class="field">
-  <%= f.label :password %>
+  <!-- <%= f.label :password %> -->
   <% if @minimum_password_length %>
   <em>(<%= @minimum_password_length %> characters minimum)</em>
-  <% end %><br />
-  <%= f.password_field :password, autocomplete: "off" %>
+  <% end %>
+  <%= f.password_field :password, autocomplete: "off", placeholder: "password"  %>
 </div>
 
 <div class="field">
-  <%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  <!-- <%= f.label :password_confirmation %><br /> -->
+  <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "password_confirmation"  %>
 </div>
 
     <%= f.hidden_field :role, :value => "member" %>
