--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,10 @@
 		</div>
 		<div>
 			<form class="search-container">
-				<input type="text" id="search-bar" placeholder="What can I help you with today?">
+				<form action="/" method="get">
+
+				<input name="term" type="text" id="search-bar" autocomplete="off" class="typeahead" placeholder="What can I help you with today?">
+				</form>
 				<a href="#"><img class="search-icon" src="http://www.endlessicons.com/wp-content/uploads/2012/12/search-icon.png"></a>
 			</form>
 		</div>
