--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,50 +1,146 @@
 <p id="notice"><%= notice %></p>
 
-<div id="ques">
-  <%= form_for(@question) do |f| %>
-  <% if @question.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@question.errors.count, "error") %> prohibited this question from being saved:</h2>
+<% if user_signed_in? %>
+<div id="form">
+  <div class="row">
 
-    <ul>
-      <% @question.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
-  <% end %>
+    <%= form_for @question, remote: true do |f| %>
+    <form class="col s12">
+      <div class="input-field col s11">
+        <i class="material-icons prefix">account_circle</i>
+        <%= f.text_field :content, placeholder: "What is your question?", :class => 'input'  %> <br>
 
-  <div class="field">
-    <%= f.text_field :content , placeholder: "What is your question?", :class => 'input'%>
+        <%= f.hidden_field :user_id, :value => current_user.id %>
+      </div>
+      <div class="actions col s12">
+
+        <%= f.check_box :anonymous, id:"anonymous1" %>
+        <%= f.label :Anonymously , for:"anonymous1", id:"anonymous1"%>  &nbsp;  &nbsp;  &nbsp;
+        <div class="waves-effect waves-light btn">
+
+          <%= f.submit %>
+        </div>
+      </div>
+    </form>
+
+    <% end %>
+
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-  <% end %>
 </div>
 
-<h1>Listing Questions</h1>
+<% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @questions.each do |question| %>
-    <tr>
-      <td><%= question.content %></td>
-      <td><%= link_to 'Show', question %></td>
-      <td><%= link_to 'Edit', edit_question_path(question) %></td>
-      <td><%= link_to 'Destroy', question, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
 
-<%= link_to 'New Question', new_question_path %>
+<div id="questions">
+
+
+  <% @feed.each do |question| %>
+  <section>
+
+
+    <div class="row">
+      <div class="col s12">
+        <div class="card-panel ">
+          <span class="grey-text">
+            <%= render 'question' ,question: question %>
+          </span>
+        </div>
+      </div>
+    </div>
+
+
+
+    <div id="answers">
+      <% if user_signed_in? %>
+
+
+      <div class="row">
+        <%= form_for @answer, remote: true do |f| %>
+
+        <form class="col s12">
+          <div class="input-field col s11">
+            <i class="material-icons prefix">account_circle</i>
+            <!-- <input id="icon_prefix" type="text" class="validate"> -->
+            <!-- <label for="icon_prefix">First Name</label> -->
+            <%= f.text_field :content, placeholder: "Write answer...", :class => 'input'  %> <br>
+
+
+            <%= f.hidden_field :user_id, :value => current_user.id %>
+            <%= f.hidden_field :question_id, :value => question.id %>
+
+          </div>
+          <div class="actions col s12">
+            <%= f.check_box :anonymous, id:"anonymous" %>
+            <%= f.label :Anonymously , for:"anonymous", id:"anonymous"%>  &nbsp;  &nbsp;  &nbsp;
+            <div class="waves-effect waves-light btn">
+
+              <%= f.submit %>
+            </div>
+          </div>
+          <% end %>
+
+        </form>
+      </div>
+
+
+
+
+
+
+
+
+      <% end %>
+      <%= div_for question, :class => "rowBox" do %>
+      <ul class="collapsible popout" data-collapsible="accordion">
+
+        <% @ans_feed.each do|answer| %>
+        <% if answer.question_id == question.id %>
+
+
+        <li>
+          <div class="collapsible-header"><i class="material-icons">border_color</i>
+            <div class="head">
+              <div class="userImage">
+
+              </div>
+              <div class="userDetail">
+                <% unless answer.anonymous %>
+                <%= answer.user.first_name %><br>
+                <% else %>
+                Anonymous<br>
+                <% end %>
+                Answered <%= answer.created_at.strftime("%b %d") %>
+              </div>
+            </div>
+          </div>
+          <div class="collapsible-body"><span>
+            <% if current_user %>
+
+            <%= rating_for answer, 'content_quality' , half_show: true%>
+            <% end %>
+          <%= render 'answer', answer: answer %>
+                
+          </span></div>
+        </li>
+
+
+
+        <% end %>
+        <% end %>
+      </ul>
+
+      <% end %>
+    </div>
+  </section>
+  <% end %>
+
+<%= paginate @feed %>
+
+
+</div>
+
+
+
+
